fixed imports and path files